[package]
name = "ble-serial-term"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.38.0", features = ["full"] }
tokio-macros = "2.3.0"
tokio-serial = "5.4.4"
nix = { version = "0.29.0", features = ["term", "fs"] }
futures = "0.3.30"
clap = { version = "4.5.4", features = ["derive"] }
bleasy = "0.3.1"
uuid = "1.8.0"
